fix padding on mobile veiw and add padding to search bar

--- a/src/pages/main-pages.css
+++ b/src/pages/main-pages.css
@@ -23,7 +23,7 @@ body {
 	border-radius: 20px;
 	height: 35px;
 	outline: none;
-	padding-left: 10px;
+	padding-left: 1rem;
 	font-size: 16px;
 }
 
@@ -83,7 +83,7 @@ p {
 	flex-direction: row;
 	align-items: center;
 	overflow-x: auto;
-	height: 120px;
+	height: 170px;
 }
 .movies img {
 	height: 150px;
